- override overflow:hidden for body tag to fix issue #3

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,6 +4,9 @@ html {
     overflow:hidden;
 }
 
+body#manual {
+    overflow: auto;
+}
 
 #colorScale {
     width: 50%;
